--- a/Lorelei/Lorelei.csproj
+++ b/Lorelei/Lorelei.csproj
@@ -42,12 +42,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Helper\Image.cs" />
+    <Compile Include="OAuth\OAuthHelper.cs" />
+    <Compile Include="OAuth\OAuthData.cs" />
+    <Compile Include="TwitterAPI\APIurl.cs" />
+    <Compile Include="InfoPack\TweetInfoPack.cs" />
+    <Compile Include="InfoPack\UserInfoPack.cs" />
     <Compile Include="Lorelei.cs" />
     <Compile Include="Exceptions.cs" />
     <Compile Include="ILorelei.cs" />
-    <Compile Include="OAuthBase.cs" />
+    <Compile Include="OAuth\OAuthBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TwitterAPI\REST\GetImage.cs" />
+    <Compile Include="TwitterAPI\REST\PostTweet.cs" />
+    <Compile Include="TwitterAPI\Streaming\UserStream.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
