--- a/Lorelei/Lorelei.csproj
+++ b/Lorelei/Lorelei.csproj
@@ -53,6 +53,7 @@
     <Compile Include="ILorelei.cs" />
     <Compile Include="OAuth\OAuthBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TwitterAPI\REST\Favorite.cs" />
     <Compile Include="TwitterAPI\REST\GetImage.cs" />
     <Compile Include="TwitterAPI\REST\PostTweet.cs" />
     <Compile Include="TwitterAPI\Streaming\UserStream.cs" />
